Fix for extra space below hero title in Safari

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -212,6 +212,7 @@ body {
 
     .page__title {
       font-size: $type-size-2;
+      margin-block-end: initial;
 
       @include breakpoint($small) {
         font-size: $type-size-1;
